# YJSP_QRModule

./: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  qrscanner.cpp  qrscanner.hpp
