cmake_minimum_required(VERSION 3.0.0)
set(CMAKE_MODULE_PATH ${ZBARCV_SOURCE_DIR})
project(CVTesty VERSION 0.1.0)
find_package(Zbar0)
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
add_executable(CVTesty main.cpp)
target_link_libraries( CVTesty ${OpenCV_LIBS})
target_link_libraries(${PROJECT_NAME} ${ZBAR_LIBS} zbar)